@@ -67,9 +67,9 @@ class LocalUaaRestTemplateMockMvcTests {
         Method createRequest = OAuth2RestTemplate.class.getDeclaredMethod("createRequest", URI.class, HttpMethod.class);
         ReflectionUtils.makeAccessible(createRequest);
         ClientHttpRequest request = (ClientHttpRequest) createRequest.invoke(localUaaRestTemplate, new URI("http://localhost/oauth/token"), HttpMethod.POST);
-        assertThat(request.getHeaders().get("Authorization")).as("authorization bearer header should be present").hasSize(1);
-        assertThat(request.getHeaders().get("Authorization").getFirst()).as("authorization bearer header should be present").isNotNull();
+        assertThat(request.getHeaders().get("Authorization")).as("authorization bearer header should be present").hasSize(1)
+                .first().as("authorization bearer header should be present").isNotNull();
         assertThat(request.getHeaders().get("Authorization").getFirst().toLowerCase()).startsWith("bearer ");
-        assertThat(request.getHeaders().get("Authorization").getFirst()).endsWith(token.getValue());
+        assertThat(request.getHeaders().get("Authorization").get(0)).endsWith(token.getValue());
     }
 }
